--- a/index.html
+++ b/index.html
@@ -1089,10 +1089,10 @@ body.mobile-view .about-stats {
             <div class="header-content">
                 <div class="header-brand">
                     <div class="profile-photo ios-card">
-                        <div class="profile-initials gradient-text">KC</div>
+                        <div class="profile-initials gradient-text">Karansh</div>
                     </div>
                     <div class="header-text">
-                        <h1 class="header-title gradient-text">rarekartik</h1>
+                        <h1 class="header-title gradient-text">RAREKARTIK</h1>
                         <p class="header-subtitle">Personal Brand Built with Passion for Technology</p>
                     </div>
                 </div>
@@ -1145,7 +1145,7 @@ body.mobile-view .about-stats {
                 <div class="about-content">
                     <div class="about-card ios-card animate-on-scroll">
                         <div class="about-text">
-                            <p>Hello, My name is Kartik Chouhan and I'm 21 Years old as of now. Born in 3rd Sep 2004, I spent my childhood in my home village Private Information.</p>
+                            <p>Hello, My name is Kartik Chouhan and I'm 21 Years old as of now. Born on 3rd Sep 2004, I spent my childhood in my home village "Private Information"</p>
                         </div>
                         <div class="about-stats">
                             <div class="stat-item">
@@ -1175,7 +1175,7 @@ body.mobile-view .about-stats {
                         <div class="timeline-marker"></div>
                         <div class="timeline-content ios-card">
                             <h3 class="timeline-title">Masters of Commerce (MCom)</h3>
-                            <p class="timeline-institution">Private Information</p>
+                            <p class="timeline-institution">"Private Information"</p>
                             <p class="timeline-session">Session: 2025-2027</p>
                             <span class="timeline-status pursuing">Pursuing</span>
                         </div>
@@ -1185,7 +1185,7 @@ body.mobile-view .about-stats {
                         <div class="timeline-marker"></div>
                         <div class="timeline-content ios-card">
                             <h3 class="timeline-title">BCom</h3>
-                            <p class="timeline-institution">Private Information</p>
+                            <p class="timeline-institution">"Private Information"</p>
                             <p class="timeline-session">Session: 2022-2025</p>
                             <span class="timeline-status completed">Completed</span>
                         </div>
@@ -1195,7 +1195,7 @@ body.mobile-view .about-stats {
                         <div class="timeline-marker"></div>
                         <div class="timeline-content ios-card">
                             <h3 class="timeline-title">12th Commerce</h3>
-                            <p class="timeline-institution">Private Information</p>
+                            <p class="timeline-institution">"Private Information"</p>
                             <p class="timeline-session">Session: 2021-2022</p>
                             <span class="timeline-status completed">Completed</span>
                         </div>
@@ -1205,7 +1205,7 @@ body.mobile-view .about-stats {
                         <div class="timeline-marker"></div>
                         <div class="timeline-content ios-card">
                             <h3 class="timeline-title">10th General Stream</h3>
-                            <p class="timeline-institution">Private Information</p>
+                            <p class="timeline-institution">"Private Information"</p>
                             <p class="timeline-session">Session: 2019-2020</p>
                             <span class="timeline-status completed">Completed>
                         </div>
