--- a/index.html
+++ b/index.html
@@ -1089,7 +1089,7 @@ body.mobile-view .about-stats {
             <div class="header-content">
                 <div class="header-brand">
                     <div class="profile-photo ios-card">
-                        <div class="profile-initials gradient-text">Karansh</div>
+                        <div class="profile-initials gradient-text">K</div>
                     </div>
                     <div class="header-text">
                         <h1 class="header-title gradient-text">RAREKARTIK</h1>
