--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         .grid-bento { display: grid; grid-template-columns: 1fr; gap: 24px; width: 100%; }
         @media (min-width: 1024px) {
             .grid-bento { grid-template-columns: repeat(12, 1fr); }
+            .col-12 { grid-column: span 12; }
             .col-8 { grid-column: span 8; }
             .col-6 { grid-column: span 6; }
             .col-4 { grid-column: span 4; }
@@ -85,6 +86,13 @@
         .marquee-content { white-space: nowrap; display: flex; gap: 50px; font-weight: 900; font-size: 1.5rem; color: white; text-transform: uppercase; animation: scroll 20s linear infinite; }
         @keyframes scroll { from { transform: translateX(0); } to { transform: translateX(-50%); } }
         .matrix-mode { color: var(--matrix-green) !important; font-family: 'Courier New', monospace; text-shadow: 0 0 5px var(--matrix-green); }
+
+        /* Project Card Special */
+        .project-card { 
+            background: linear-gradient(135deg, var(--surface) 0%, var(--surface-hover) 100%); 
+            border: 1px solid var(--accent); cursor: pointer; text-decoration: none; color: inherit;
+        }
+        .project-card:hover { transform: scale(1.02); box-shadow: 0 10px 40px rgba(59, 130, 246, 0.2); }
 
         /* === PRELOADER FIX (WHITE) === */
         .preloader {
@@ -252,6 +260,7 @@
     <section id="skills" class="section">
         <h2 style="text-align: center; margin-bottom: 50px;">Detailed Competencies</h2>
         <div class="grid-bento">
+            
             <div class="card col-6 reveal">
                 <span class="text-label">Financial Tech</span>
                 <div class="list-item">
@@ -278,7 +287,7 @@
 
             <div class="card col-12 reveal">
                 <span class="text-label">Creative</span>
-                <div style="display:grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap:20px;">
+                <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 24px;">
                     <div class="list-item">
                         <i class="fab fa-youtube" style="color: var(--accent); font-size:1.2rem;"></i>
                         <div><strong>Content Creation</strong><div style="font-size: 0.8rem; color: var(--text-dim)">YouTube @rarekartik</div></div>
@@ -289,6 +298,19 @@
                     </div>
                 </div>
             </div>
+
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="grid-bento">
+            <a href="https://rarekartik.github.io/myprojects.html" class="card project-card col-12 reveal" style="align-items: center; text-align: center; justify-content: center; padding: 60px;">
+                <span class="text-label" style="color: var(--accent);">Tools Developed By Me</span>
+                <h2 style="font-size: 3rem; margin: 10px 0;">My Projects <i class="fas fa-arrow-right" style="font-size: 2rem; margin-left: 10px;"></i></h2>
+                <p style="max-width: 600px;">
+                    Explore a suite of web tools I built to automate tasks, generate documents, and solve everyday problems.
+                </p>
+            </a>
         </div>
     </section>
 
